--- a/aine/references-fi.bib
+++ b/aine/references-fi.bib
@@ -1,102 +1,405 @@
-@ARTICLE{McGabe76,
-  author={McCabe, T.J.},
-  journal={Software Engineering, IEEE Transactions on},
-  title={A Complexity Measure},
-  year={1976},
-  volume={SE-2},
-  number={4},
-  pages={308-320},
-  keywords={Basis;complexity measure;control flow;decomposition;graph theory;independence;linear;modularization;programming;reduction;software;testing;Fluid flow measurement;Graph theory;Linear programming;National security;Software engineering;Software maintenance;Software measurement;Software systems;Software testing;System testing;Basis;complexity measure;control flow;decomposition;graph theory;independence;linear;modularization;programming;reduction;software;testing},
-  doi={10.1109/TSE.1976.233837},
-  ISSN={0098-5589},
-  month={Dec}
+@ARTICLE{M76,
+    author={McCabe, T.J.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={A Complexity Measure},
+    year={1976},
+    volume={SE-2},
+    number={4},
+    pages={308-320},
+    keywords={Basis;complexity measure;control flow;decomposition;graph theory;independence;linear;modularization;programming;reduction;software;testing;Fluid flow measurement;Graph theory;Linear programming;National security;Software engineering;Software maintenance;Software measurement;Software systems;Software testing;System testing;Basis;complexity measure;control flow;decomposition;graph theory;independence;linear;modularization;programming;reduction;software;testing},
+    doi={10.1109/TSE.1976.233837},
+    ISSN={0098-5589},
+    month={Dec}
 }
 
 @ARTICLE{CK94,
-author={Chidamber, S.R. and Kemerer, C.F.},
-journal={Software Engineering, IEEE Transactions on},
-title={A metrics suite for object oriented design},
-year={1994},
-volume={20},
-number={6},
-pages={476-493},
-keywords={object-oriented methods;object-oriented programming;software metrics;automated data collection tool;measurement principles;metrics suite;object oriented design;object oriented programming;organization;process improvement;software development;software measures;Application software;Engineering management;Information management;Information technology;Ontologies;Programming;Software development management;Software engineering;Software measurement;Technology management},
-doi={10.1109/32.295895},
-ISSN={0098-5589},
-month={Jun}
+    author={Chidamber, S.R. and Kemerer, C.F.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={A metrics suite for object oriented design},
+    year={1994},
+    volume={20},
+    number={6},
+    pages={476-493},
+    keywords={object-oriented methods;object-oriented programming;software metrics;automated data collection tool;measurement principles;metrics suite;object oriented design;object oriented programming;organization;process improvement;software development;software measures;Application software;Engineering management;Information management;Information technology;Ontologies;Programming;Software development management;Software engineering;Software measurement;Technology management},
+    doi={10.1109/32.295895},
+    ISSN={0098-5589},
+    month={Jun}
 }
 
 @article{CK91,
- author = {Chidamber, Shyam R. and Kemerer, Chris F.},
- title = {Towards a Metrics Suite for Object Oriented Design},
- journal = {SIGPLAN Not.},
- issue_date = {Nov. 1991},
- volume = {26},
- number = {11},
- month = nov,
- year = {1991},
- issn = {0362-1340},
- pages = {197--211},
- numpages = {15},
- url = {http://doi.acm.org/10.1145/118014.117970},
- doi = {10.1145/118014.117970},
- acmid = {117970},
- publisher = {ACM},
- address = {New York, NY, USA}
+    author = {Chidamber, Shyam R. and Kemerer, Chris F.},
+    title = {Towards a Metrics Suite for Object Oriented Design},
+    journal = {SIGPLAN Not.},
+    issue_date = {Nov. 1991},
+    volume = {26},
+    number = {11},
+    month = nov,
+    year = {1991},
+    issn = {0362-1340},
+    pages = {197--211},
+    numpages = {15},
+    url = {http://doi.acm.org/10.1145/118014.117970},
+    doi = {10.1145/118014.117970},
+    acmid = {117970},
+    publisher = {ACM},
+    address = {New York, NY, USA}
+}
+
+@ARTICLE{W88,
+    author={Weyuker, E.J.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={Evaluating software complexity measures},
+    year={1988},
+    volume={14},
+    number={9},
+    pages={1357-1365},
+    keywords={software engineering;cyclomatic number;data flow complexity;effort measure;software complexity measures;software engineering;statement count;syntactic software complexity;synthetic complexity;Arithmetic;Computer languages;Computer science;Concrete;Fluid flow measurement;Particle measurements;Software measurement;Software metrics;Software reliability;Software testing},
+    doi={10.1109/32.6178},
+    ISSN={0098-5589},
+    month={Sep}
 }
 
 @ARTICLE{SK03,
-author={Subramanyam, R. and Krishnan, M.S.},
-journal={Software Engineering, IEEE Transactions on},
-title={Empirical analysis of CK metrics for object-oriented design complexity: implications for software defects},
-year={2003},
-volume={29},
-number={4},
-pages={297-310},
-keywords={object-oriented programming;program debugging;software metrics;C++;CK metric analysis;Java;OO design complexity metrics;object-oriented design complexity;software defect determination;software defects;software development;software quality;Application software;Computer industry;Computer languages;Industrial control;Java;Productivity;Programming;Size control;Software design;Software quality},
-doi={10.1109/TSE.2003.1191795},
-ISSN={0098-5589},
-month={April}
+    author={Subramanyam, R. and Krishnan, M.S.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={Empirical analysis of CK metrics for object-oriented design complexity: implications for software defects},
+    year={2003},
+    volume={29},
+    number={4},
+    pages={297-310},
+    keywords={object-oriented programming;program debugging;software metrics;C++;CK metric analysis;Java;OO design complexity metrics;object-oriented design complexity;software defect determination;software defects;software development;software quality;Application software;Computer industry;Computer languages;Industrial control;Java;Productivity;Programming;Size control;Software design;Software quality},
+    doi={10.1109/TSE.2003.1191795},
+    ISSN={0098-5589},
+    month={April}
 }
 
 @ARTICLE{GKMS00,
-author={Graves, T.L. and Karr, A.F. and Marron, J.S. and Siy, H.},
-journal={Software Engineering, IEEE Transactions on},
-title={Predicting fault incidence using software change history},
-year={2000},
-volume={26},
-number={7},
-pages={653-661},
-keywords={management of change;software fault tolerance;software maintenance;software metrics;change history;change management data;code decay;fault incidence;fault potential;metrics;software change history;statistical analysis;Aging;Degradation;History;Length measurement;Predictive models;Software development management;Software measurement;Software systems;Statistical analysis;Time measurement},
-doi={10.1109/32.859533},
-ISSN={0098-5589},
-month={Jul}
+    author={Graves, T.L. and Karr, A.F. and Marron, J.S. and Siy, H.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={Predicting fault incidence using software change history},
+    year={2000},
+    volume={26},
+    number={7},
+    pages={653-661},
+    keywords={management of change;software fault tolerance;software maintenance;software metrics;change history;change management data;code decay;fault incidence;fault potential;metrics;software change history;statistical analysis;Aging;Degradation;History;Length measurement;Predictive models;Software development management;Software measurement;Software systems;Statistical analysis;Time measurement},
+    doi={10.1109/32.859533},
+    ISSN={0098-5589},
+    month={Jul}
 }
 
 @ARTICLE{BBM96,
-author={Basili, V.R. and Briand, L.C. and Melo, W.L.},
-journal={Software Engineering, IEEE Transactions on},
-title={A validation of object-oriented design metrics as quality indicators},
-year={1996},
-volume={22},
-number={10},
-pages={751-761},
-keywords={C language;information systems;object-oriented languages;object-oriented methods;software maintenance;software metrics;software quality;C++ programming language;class maintenance changes;data set;fault-prone classes;information management systems;metric validation;object oriented analysis;object-oriented design metrics;sequential life cycle model;software development;software quality indicators;Computer languages;Costs;Design methodology;Object oriented modeling;Predictive models;Programming;Resource management;Software maintenance;Software systems;System testing},
-doi={10.1109/32.544352},
-ISSN={0098-5589},
-month={Oct}
+    author={Basili, V.R. and Briand, L.C. and Melo, W.L.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={A validation of object-oriented design metrics as quality indicators},
+    year={1996},
+    volume={22},
+    number={10},
+    pages={751-761},
+    keywords={C language;information systems;object-oriented languages;object-oriented methods;software maintenance;software metrics;software quality;C++ programming language;class maintenance changes;data set;fault-prone classes;information management systems;metric validation;object oriented analysis;object-oriented design metrics;sequential life cycle model;software development;software quality indicators;Computer languages;Costs;Design methodology;Object oriented modeling;Predictive models;Programming;Resource management;Software maintenance;Software systems;System testing},
+    doi={10.1109/32.544352},
+    ISSN={0098-5589},
+    month={Oct}
 }
 
-@ARTICLE{HM96, 
-author={Hitz, M.},
-journal={Software Engineering, IEEE Transactions on},
-title={Chidamber and Kemerer's metrics suite: a measurement theory perspective},
-year={1996},
-volume={22},
-number={4},
-pages={267-271},
-keywords={object-oriented methods;object-oriented programming;program testing;program verification;software metrics;empirical testing;measurement theory;metrics suite;object coupling measure;object-oriented cohesion measure;object-oriented design;partial evaluation;representation condition;software metrics;sound empirical relation system;validation principles;Guidelines;Network-on-a-chip;Ontologies;Predictive models;Process design;Programming profession;Software design;Software measurement;Software metrics;Testing},
-doi={10.1109/32.491650},
-ISSN={0098-5589},
-month={Apr}
+@ARTICLE{HM96,
+    author={Hitz, M.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={Chidamber and Kemerer's metrics suite: a measurement theory perspective},
+    year={1996},
+    volume={22},
+    number={4},
+    pages={267-271},
+    keywords={object-oriented methods;object-oriented programming;program testing;program verification;software metrics;empirical testing;measurement theory;metrics suite;object coupling measure;object-oriented cohesion measure;object-oriented design;partial evaluation;representation condition;software metrics;sound empirical relation system;validation principles;Guidelines;Network-on-a-chip;Ontologies;Predictive models;Process design;Programming profession;Software design;Software measurement;Software metrics;Testing},
+    doi={10.1109/32.491650},
+    ISSN={0098-5589},
+    month={Apr}
 }
+
+@ARTICLE{IEEE90,
+    journal={IEEE Std 610.12-1990},
+    title={IEEE Standard Glossary of Software Engineering Terminology},
+    year={1990},
+    pages={1-84},
+    keywords={glossaries;software engineering;standards;IEEE Std 610.12-1990;software engineering terminology;standard glossary;Software engineering;Standards;Terminology;Definitions;Software engineering;dictionary;glossary;terminology},
+    doi={10.1109/IEEESTD.1990.101064},
+    month={Dec}
+}
+
+@MISC{ISO9000,
+    author = {ISO},
+    title = {Quality management systems – Fundamentals and vocabulary},
+    year = {2005},
+    url = {http://www.iso.org/iso/home/store/catalogue_ics/catalogue_detail_ics.htm?csnumber=42180},
+    keywords = {ISO 9000, software quality}
+}
+
+@BOOK{G04,
+    title={Software quality assurance: from theory to implementation},
+    author={Galin, Daniel},
+    year={2004},
+    publisher={Addison-Wesley}
+}
+
+@BOOK{JGB74,
+    title={Quality control handbook},
+    year={1974},
+    author={Juran, Joseph M and Gryna, FM and Bingham Jr, RS},
+    journal={McGraw-Hill Book Company, Chapters},
+    volume={9},
+    pages={22}
+}
+
+@BOOK{PI92,
+    title={Software engineering: a practitioner's approach},
+    author={Pressman, Roger S and Ince, Darrel},
+    volume={5},
+    year={1992},
+    publisher={McGraw-hill New York}
+}
+
+@INPROCEEDINGS{MD06,
+    author={Mnkandla, E. and Dwolatzky, B.},
+    booktitle={Software Engineering Advances, International Conference on},
+    title={Defining Agile Software Quality Assurance},
+    year={2006},
+    month={Oct.},
+    pages={36-36},
+    keywords={Logic testing;Programming;Q factor;Quality assurance;Quality management;Software engineering;Software quality;Software testing;Taxonomy;Writing;Agile methodologies;agile quality assurance;software development;software quality.},
+    doi={10.1109/ICSEA.2006.261292}
+}
+
+@MISC{ISO25010,
+    author = {ISO/IEC},
+    title = {Systems and software engineering – Systems and software Quality Requirements and Evaluation (SQuaRE) – System and software quality models},
+    year = {2011},
+    url = {http://www.iso.org/iso/home/store/catalogue_ics/catalogue_detail_ics.htm?csnumber=35733},
+    keywords = {ISO/IEC 25010, software quality}
+}
+
+@ARTICLE{B73,
+    title={Quantitative Assessment},
+    author={Boehm, B},
+    journal={Datamation},
+    volume={19},
+    number={5},
+    pages={49--57},
+    year={1973}
+}
+
+@BOOK{LB85,
+    editor = {Lehman, M. M. and Belady, L. A.},
+    title = {Program Evolution: Processes of Software Change},
+    year = {1985},
+    isbn = {0-12-442440-6},
+    publisher = {Academic Press Professional, Inc.},
+    address = {San Diego, CA, USA},
+}
+
+@INPROCEEDINGS{ZN08,
+    author = {Zimmermann, Thomas and Nagappan, Nachiappan},
+    title = {Predicting Defects Using Network Analysis on Dependency Graphs},
+    booktitle = {Proceedings of the 30th International Conference on Software Engineering},
+    series = {ICSE '08},
+    year = {2008},
+    isbn = {978-1-60558-079-1},
+    location = {Leipzig, Germany},
+    pages = {531--540},
+    numpages = {10},
+    url = {http://doi.acm.org/10.1145/1368088.1368161},
+    doi = {10.1145/1368088.1368161},
+    acmid = {1368161},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {defect prediction, dependency graph, network analysis, windows server 2003},
+}
+
+@INPROCEEDINGS{MJ03,
+    author={Molokken, K. and Jorgensen, M.},
+    booktitle={Empirical Software Engineering, 2003. ISESE 2003. Proceedings. 2003 International Symposium on},
+    title={A review of software surveys on software effort estimation},
+    year={2003},
+    pages={223-230},
+    keywords={project management;software cost estimation;average cost overrun;effort overrun;estimation knowledge;expert judgment;formal estimation models;schedule overruns;software effort estimation;software projects;software surveys;Chaos;Computer industry;Costs;Job shop scheduling;Laboratories;Processor scheduling;Project management;Software engineering;Software performance;Writing},
+    doi={10.1109/ISESE.2003.1237981},
+    month={Sept}
+}
+
+@BOOK{DM86,
+    title={Controlling software projects: Management, measurement, and estimates},
+    author={DeMarco, Tom},
+    year={1986},
+    publisher={Prentice Hall PTR}
+}
+
+@ARTICLE{B84,
+    author={Boehm, B.W.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={Software Engineering Economics},
+    year={1984},
+    volume={SE-10},
+    number={1},
+    pages={4-21},
+    keywords={Analytical models;Costs;Engineering management;Life estimation;Microeconomics;Power generation economics;Resource management;Software engineering;Software prototyping;State estimation;Computer programming costs;cost models;management decision aids;software cost estimation;software economics;software engineering;software management},
+    doi={10.1109/TSE.1984.5010193},
+    ISSN={0098-5589},
+    month={Jan}
+}
+
+@ARTICLE{MT04,
+    author={Mens, T. and Tourwe, T.},
+    journal={Software Engineering, IEEE Transactions on},
+    title={A survey of software refactoring},
+    year={2004},
+    volume={30},
+    number={2},
+    pages={126-139},
+    keywords={bibliographies;object-oriented programming;programming environments;reverse engineering;software maintenance;software quality;software reusability;coding technique;coding tools;construction tool;programming environment;reverse engineering;software refactoring;Buildings;Costs;Programming environments;Reverse engineering;Software maintenance;Software quality;Software reusability;Software tools;Spirals;Taxonomy},
+    doi={10.1109/TSE.2004.1265817},
+    ISSN={0098-5589},
+    month={Feb}
+}
+
+@ARTICLE{CALO94,
+    author={Coleman, D. and Ash, D. and Lowther, B. and Oman, P.},
+    journal={Computer},
+    title={Using metrics to evaluate software system maintainability},
+    year={1994},
+    volume={27},
+    number={8},
+    pages={44-49},
+    keywords={computational complexity;software maintenance;software metrics;complexity metrics;consistent application;inherent complexity;measuring tools;modeling tools;relative complexity;software metrics;software system maintainability evaluation;Computer industry;Costs;Embedded software;Large-scale systems;Software engineering;Software maintenance;Software measurement;Software metrics;Software quality;Software systems},
+    doi={10.1109/2.303623},
+    ISSN={0018-9162},
+    month={Aug}
+}
+
+@article{G83,
+    author = {Guimaraes, Tor},
+    title = {Managing Application Program Maintenance Expenditures},
+    journal = {Commun. ACM},
+    issue_date = {Oct. 1983},
+    volume = {26},
+    number = {10},
+    month = oct,
+    year = {1983},
+    issn = {0001-0782},
+    pages = {739--746},
+    numpages = {8},
+    url = {http://doi.acm.org/10.1145/358413.358421},
+    doi = {10.1145/358413.358421},
+    acmid = {358421},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {application program maintenance, managing application program maintenance expenditures}
+}
+
+@INPROCEEDINGS{ME98,
+    author={Munson, J.C. and Elbaum, S.G.},
+    booktitle={Software Maintenance, 1998. Proceedings., International Conference on},
+    title={Code churn: a measure for estimating the impact of code change},
+    year={1998},
+    pages={24-31},
+    keywords={embedded systems;software maintenance;software metrics;software tools;code change impact estimation;code churn;code complexity churn;fault surrogate;large embedded software system;methodology;software development process;software evolution process;software maintenance;software tools;source code static measurement;Computer science;Fault detection;Fault diagnosis;Programming;Software measurement;Software systems;Software testing;System testing;Tellurium;Time measurement},
+    doi={10.1109/ICSM.1998.738486},
+    ISSN={1063-6773},
+    month={Nov}
+}
+
+@inproceedings{FM00,
+    author = {Fenton, Norman E. and Neil, Martin},
+    title = {Software Metrics: Roadmap},
+    booktitle = {Proceedings of the Conference on The Future of Software Engineering},
+    series = {ICSE '00},
+    year = {2000},
+    isbn = {1-58113-253-0},
+    location = {Limerick, Ireland},
+    pages = {357--370},
+    numpages = {14},
+    url = {http://doi.acm.org/10.1145/336512.336588},
+    doi = {10.1145/336512.336588},
+    acmid = {336588},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {Bayesian belief nets, casual models, multi-criteria decision aid, risk assessment, software metrics},
+}
+
+@article{FNMHMKM07,
+    title = {Predicting software defects in varying development lifecycles using Bayesian nets},
+    journal = {Information and Software Technology},
+    volume = {49},
+    number = {1},
+    pages = {32 - 43},
+    year = {2007},
+    note = {Most Cited Journal Articles in Software Engineering - 2000},
+    issn = {0950-5849},
+    doi = {http://dx.doi.org/10.1016/j.infsof.2006.09.001},
+    url = {http://www.sciencedirect.com/science/article/pii/S0950584906001194},
+    author = {Norman Fenton and Martin Neil and William Marsh and Peter Hearty and David Marquez and Paul Krause and Rajat Mishra},
+    keywords = {Causal models, Dynamic Bayesian networks, Software defects, Decision support}
+}
+
+@INPROCEEDINGS{NB05,
+    author={Nagappan, N. and Ball, T.},
+    booktitle={Software Engineering, 2005. ICSE 2005. Proceedings. 27th International Conference on},
+    title={Use of relative code churn measures to predict system defect density},
+    year={2005},
+    pages={284-292},
+    keywords={regression analysis;software metrics;systems analysis;multiple regression;principal component analysis;relative code churn measures;statistical regression;system defect density prediction;Automatic control;Computer science;Control systems;Density measurement;History;Software engineering;Software measurement;Software quality;Software systems;Time measurement},
+    doi={10.1109/ICSE.2005.1553571},
+    month={May}
+}
+
+@book{H77,
+    title={Elements of Software Science (Operating and programming systems series)},
+    author={Halstead, Maurice H},
+    year={1977},
+    publisher={Elsevier Science Inc.}
+}
+
+@article{LH93,
+    title = {Object-Oriented Software Object-oriented metrics that predict maintainability},
+    journal = {Journal of Systems and Software},
+    volume = {23},
+    number = {2},
+    pages = {111 - 122},
+    year = {1993},
+    issn = {0164-1212},
+    doi = {http://dx.doi.org/10.1016/0164-1212(93)90077-B},
+    url = {http://www.sciencedirect.com/science/article/pii/016412129390077B},
+    author = {Wei Li and Sallie Henry}
+}
+
+@article{M65,
+    title={Programming real-time computer systems},
+    author={Martin, James},
+    year={1965},
+    publisher={Prentice-Hall}
+}
+
+@article{H72,
+    author = {Halstead, M. H.},
+    title = {Natural Laws Controlling Algorithm Structure?},
+    journal = {SIGPLAN Not.},
+    issue_date = {February 1972},
+    volume = {7},
+    number = {2},
+    month = feb,
+    year = {1972},
+    issn = {0362-1340},
+    pages = {19--26},
+    numpages = {8},
+    url = {http://doi.acm.org/10.1145/953363.953366},
+    doi = {10.1145/953363.953366},
+    acmid = {953366},
+    publisher = {ACM},
+    address = {New York, NY, USA}
+}
+
+@book{B94,
+    author = {Booch, Grady},
+    title = {Object-oriented Analysis and Design with Applications (2Nd Ed.)},
+    year = {1994},
+    isbn = {0-8053-5340-2},
+    publisher = {Benjamin-Cummings Publishing Co., Inc.},
+    address = {Redwood City, CA, USA},
+} 
